<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/overview_blue"
    android:fitsSystemWindows="true">
    <!--#E43F3F-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingTop="56dp"
        android:paddingRight="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/image"
            android:src="@drawable/logo" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="0dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="0dp"
            android:layout_height="0dp" />
        <!--  Email Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/et_user_login_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="用户名"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <!--  Password Label -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"

            android:textColorHint="@color/qmui_config_color_white"
            app:boxBackgroundColor="@color/qmui_config_color_white"
            app:boxStrokeColor="@color/qmui_config_color_white">

<!--            android:outlineAmbientShadowColor="@color/qmui_config_color_white"
                android:outlineSpotShadowColor="@color/qmui_config_color_white"-->
            <EditText
                android:id="@+id/et_user_login_user_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"

                android:shadowColor="@color/qmui_config_color_white"
                android:textColor="@color/qmui_config_color_white"
                android:textColorHighlight="@color/qmui_config_color_white"
                android:textColorHint="@color/qmui_config_color_white"
                android:textColorLink="@color/qmui_config_color_white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_user_login_enter"
            style="@style/MaterialButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/qmui_config_color_white"
            android:textSize="14sp"
            android:theme="@style/MaterialButton"
            app:backgroundTint="@color/app_color_blue" />
        <!--#CC1D1D-->
        <TextView
            android:id="@+id/link_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:gravity="center"
            android:text="No account yet? Create one"
            android:textSize="16sp" />

    </LinearLayout>
</ScrollView>
