<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginRight="16dp"
    android:layout_marginBottom="2dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="3dp">

    <!-- 主容器  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_data_adds_item_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/overview_red"
            android:paddingLeft="12dp"
            android:paddingTop="14dp"
            android:paddingRight="12dp"
            android:paddingBottom="14dp">

            <TextView
                android:id="@+id/tv_data_adds_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="未编辑"
                android:textColor="@color/qmui_config_color_white"
                android:textSize="16sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rl_data_adds_item_header">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/lv_data_adds_item_left_value_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/tv_data_adds_conductivity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="\?"
                        android:textAlignment="center"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_data_adds_conductivity_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/tv_data_adds_conductivity_value"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="6dp"
                        android:layout_toEndOf="@id/tv_data_adds_conductivity_value"
                        android:layout_toRightOf="@id/tv_data_adds_conductivity_value"
                        android:text="@string/conductivity_unit"
                        android:textColor="@color/qmui_config_color_gray_7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_data_adds_conductivity_value"
                        android:layout_centerHorizontal="true"
                        android:text="@string/conductivity"
                        android:textSize="16sp" />
                </RelativeLayout>


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <RelativeLayout
                    android:id="@+id/lv_data_adds_item_right_value_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true">

                    <TextView
                        android:id="@+id/tv_data_adds_density_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="\?"
                        android:textAlignment="center"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/tv_data_adds_density_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@id/tv_data_adds_density_value"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="6dp"
                        android:layout_toEndOf="@id/tv_data_adds_density_value"
                        android:layout_toRightOf="@id/tv_data_adds_density_value"
                        android:text="@string/density_unit"
                        android:textColor="@color/qmui_config_color_gray_7" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_data_adds_density_value"
                        android:layout_centerHorizontal="true"
                        android:text="@string/density"
                        android:textSize="16sp" />
                </RelativeLayout>


            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
